# ai_agent_ocaml

./: .gitignore  AGENTS.md  CLAUDE.md  README.MD  README.md  TODO.md  ai_agent_ocaml.opam  camelgent.opam  dune-project
lib/: dune
src/: agent.ml  anthropic_provider.ml  config.ml  context.ml  dune  llm.ml  llm_factory.ml  llm_provider.ml  logger.ml  message.ml  openai_provider.ml  repl.ml  shutdown.ml  tool.ml
test/: dune
used_proompts/: FIX_CLAUDE_TOOLS.md
